// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid plot all should plot grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-dasharray=""
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="470"
      y2="470"
    />
    <line
      x1="20"
      x2="980"
      y1="220"
      y2="220"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-dasharray=""
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="670"
      y2="670"
    />
    <line
      x1="20"
      x2="980"
      y1="620"
      y2="620"
    />
    <line
      x1="20"
      x2="980"
      y1="570"
      y2="570"
    />
    <line
      x1="20"
      x2="980"
      y1="520"
      y2="520"
    />
    <line
      x1="20"
      x2="980"
      y1="470"
      y2="470"
    />
    <line
      x1="20"
      x2="980"
      y1="420"
      y2="420"
    />
    <line
      x1="20"
      x2="980"
      y1="370"
      y2="370"
    />
    <line
      x1="20"
      x2="980"
      y1="320"
      y2="320"
    />
    <line
      x1="20"
      x2="980"
      y1="270"
      y2="270"
    />
    <line
      x1="20"
      x2="980"
      y1="220"
      y2="220"
    />
    <line
      x1="20"
      x2="980"
      y1="170"
      y2="170"
    />
    <line
      x1="20"
      x2="980"
      y1="120"
      y2="120"
    />
    <line
      x1="20"
      x2="980"
      y1="70"
      y2="70"
    />
    <line
      x1="20"
      x2="980"
      y1="20"
      y2="20"
    />
  </g>
  <g
    class="ver-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-dasharray=""
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="133"
      x2="133"
      y1="670"
      y2="20"
    />
    <line
      x1="698"
      x2="698"
      y1="670"
      y2="20"
    />
  </g>
  <g
    class="ver-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-dasharray=""
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="20"
      y1="670"
      y2="20"
    />
    <line
      x1="133"
      x2="133"
      y1="670"
      y2="20"
    />
    <line
      x1="246"
      x2="246"
      y1="670"
      y2="20"
    />
    <line
      x1="359"
      x2="359"
      y1="670"
      y2="20"
    />
    <line
      x1="472"
      x2="472"
      y1="670"
      y2="20"
    />
    <line
      x1="585"
      x2="585"
      y1="670"
      y2="20"
    />
    <line
      x1="698"
      x2="698"
      y1="670"
      y2="20"
    />
    <line
      x1="811"
      x2="811"
      y1="670"
      y2="20"
    />
    <line
      x1="924"
      x2="924"
      y1="670"
      y2="20"
    />
  </g>
</g>
`;

exports[`Grid plot horizontal should not plot vertical grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-dasharray=""
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="470"
      y2="470"
    />
    <line
      x1="20"
      x2="980"
      y1="220"
      y2="220"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-dasharray=""
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="670"
      y2="670"
    />
    <line
      x1="20"
      x2="980"
      y1="620"
      y2="620"
    />
    <line
      x1="20"
      x2="980"
      y1="570"
      y2="570"
    />
    <line
      x1="20"
      x2="980"
      y1="520"
      y2="520"
    />
    <line
      x1="20"
      x2="980"
      y1="470"
      y2="470"
    />
    <line
      x1="20"
      x2="980"
      y1="420"
      y2="420"
    />
    <line
      x1="20"
      x2="980"
      y1="370"
      y2="370"
    />
    <line
      x1="20"
      x2="980"
      y1="320"
      y2="320"
    />
    <line
      x1="20"
      x2="980"
      y1="270"
      y2="270"
    />
    <line
      x1="20"
      x2="980"
      y1="220"
      y2="220"
    />
    <line
      x1="20"
      x2="980"
      y1="170"
      y2="170"
    />
    <line
      x1="20"
      x2="980"
      y1="120"
      y2="120"
    />
    <line
      x1="20"
      x2="980"
      y1="70"
      y2="70"
    />
    <line
      x1="20"
      x2="980"
      y1="20"
      y2="20"
    />
  </g>
  <g
    class="ver-major-Grid"
  />
  <g
    class="ver-minor-Grid"
  />
</g>
`;
